Fix most easy compile errors